fix: alignment issues

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -134,21 +134,35 @@
     
     }
 }
-
-.title {
+.title{
     display: flex;
     flex-direction: column;
     align-items: center;
-    &__section {
+    &__section{
         display: grid;
-        grid-template-columns: repeat(3, 1fr); /* 3 cards per row */
-        gap: 2em; /* Space between cards */
-        padding: 476px;
-        margin-top: -550px;
-        margin-bottom: -207px;
-        margin-left: 47px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: 20px;
+        padding: 20px;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-
+        &__pic{
+            &__image{
+                border: 1px;
+                border-radius: 6px;
+                position: absolute;
+                width: 349px;
+                height: 370px;
+             
+              }
+              &__icon{
+                position: absolute;
+              }
+        }
+      
    &__mo {
         display: flex;
         justify-content: center;
@@ -173,6 +187,7 @@
         }
     }
 }
+
 
 
 .logos{
@@ -203,10 +218,10 @@
         z-index: 10;
     }
     &__content{
-        font-size: 18px;
-        line-height: 1.6;
+        font-size: 34px;
+        font-family: "Roboto",serif;
       span{ 
-        font-size: 18px;
+        font-size: 34px;
         color: #F43C5C;
         font-family: "Roboto",serif;
         margin-top: 10px;
@@ -227,19 +242,23 @@
         align-items:center;
         justify-content: center;
         margin-top: 20px;
-        text{
+        span{
             transform: rotate(-4.3deg);
+            font-weight: 900;
+            font-size: 50px;
+            font-family:"Roboto",serif;
         }
     }
-    &__button{
-        font-weight: bold;
+}
+    .button{
+        font-weight: 800;
         color: white;
-        background-color: #FF217C;
+        background-color:#F13E5D;
         border-radius: 10px;
         cursor: pointer;
         margin-top: 100px;
         padding: 15px 30px;
-        font-size: larger;
+        font-size: 30px;
         z-index: 10;
         font-family: Open Sans;
         width: 585px;
@@ -248,11 +267,45 @@
 
     }   
     
-}
 .icons{
     display: flex;
     background-color: #0B2A2B;
     justify-content: space-between;
+    margin-top: -24px;
+    position: relative;
+    &__tri{
+        height: 99px;
+        border-left: 52vw solid transparent;
+        border-right: 49vw solid transparent;
+        border-bottom: 70px solid #0B2A2B;
+        border-top: 100px;
+        top: -30px;
+        margin-top: -68px;
+        position: absolute;
+        }
+    &__but{
+            color: #FFFFFF;
+            background-color: #F13E5D;
+            font-weight: 800;
+            font-size: 30px;
+            margin: 8px 0 0 80px;
+            border-radius: 10px;
+            width: 585px;
+            height: 99px;
+            position: absolute;
+            right: 407px;
+            top: -97px;
+            left: 618px;
+        }
+    &__shape {
+        height: 0;
+        border-left: 52vw solid transparent;
+        border-right: 49vw solid transparent;
+        border-bottom: 70px solid #0B2A2B;
+        border-top: 100px;
+        z-index: 1;
+        margin-top: -68px;
+      }
 
     &__grp{
     display: flex;
@@ -262,7 +315,7 @@
     }
     &__text{
         color: #FFFFFF;
-        font-family: Roboto;
+        font-family: "Roboto",serif;
         font-weight: 900;
         font-size: 64px;
     }
@@ -300,7 +353,7 @@
        }
         
         
-    }
+    
     button{
         color: #FFFFFF;
         background-color: #F13E5D;
@@ -311,7 +364,7 @@
         width: 285px;
         height: 70px;
     }
-
+    }
        
 
     }
@@ -330,6 +383,11 @@
         border-top: 1px solid #194E50;
         padding: 20px;
     }
+    
+       
+          
+    
+    
 
 
     
